prettier plugons organize imports

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "prettier": "^3.1.1",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "turbo": "latest"
   },
   "engines": {
